--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -41,7 +41,7 @@
   .search-exercise-list,
   .selected-exercise-list {
     // max-height: 300px;
-    height: 100%;
+    // height: 100%;
     overflow-y: auto;
 
     img {
