Add remove icon functionality to CustomInput component and update EditWorkout to support. Enhance styles for better layout in EditWorkout.

--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -10,6 +10,8 @@
     padding: 1em;
     display: grid;
     gap: 1rem;
+    align-content: start;
+    height: 100%;
 
     &.name-stage {
       // TODO: Add styles for name stage
