--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -15,6 +15,22 @@
 
     &.name-stage {
       // TODO: Add styles for name stage
+      .selected-muscles-group-container {
+        min-height: 48px;
+        display: grid;
+        grid-auto-flow: column;
+        align-items: start;
+        justify-content: start;
+        gap: 0.5rem;
+        overflow-x: auto;
+        // padding-bottom: 1rem;
+        .no-muscles-selected {
+          font-size: 1.2rem;
+          font-weight: 600;
+          opacity: 0.7;
+          align-self: center;
+        }
+      }
       .muscles-group-container {
         padding: 1rem;
         width: 100%;
