Move click animation from CustomButton to it's own file

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -56,6 +56,7 @@
 @import '../../components/EditGoal/styles/EditGoal.scss';
 @import '../../components/ColorPicker/styles/ColorPicker.scss';
 @import '../../components/WeightChart/styles/WeightChartSettings.scss';
+@import '../../components/ClickAnimation/styles/ClickAnimation.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
