--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -31,6 +31,11 @@
           align-self: center;
         }
       }
+      .muscle-filter-container {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 0.5rem;
+      }
       .muscles-group-container {
         padding: 1rem;
         width: 100%;
