Move Picker setups to it's own folder

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,6 +39,7 @@
 @import '../../components/ItemSearch/styles/ItemSearch.scss';
 @import '../../components/MacrosDonut/styles/MacrosDonut.scss';
 @import '../../components/ItemDetails/styles/ItemDetails.scss';
+@import '../../components/Pickers/styles/Pickers.scss';
 @import '../../components/LoggedList/styles/LoggedList.scss';
 @import '../../components/LinearMacrosProgress/styles/LinearMacrosProgress.scss';
 @import '../../components/GoalBanner/styles/GoalBanner.scss';
