Add ClockPicker integration and exercise detail editing in EditWorkout

--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -54,7 +54,8 @@
     }
 
     &.details-stage {
-      // TODO: Add styles for details stage
+      height: 400px;
+      overflow-y: auto;
     }
   }
 
