Add console log for workout data in onFinish function and adjust margin in EditWorkout styles

--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -66,6 +66,7 @@
         .divider,
         .MuiTextField-root,
         h4 {
+          margin: 0;
           grid-column: 1/-1;
         }
       }
