Integrate Workouts page with Redux for workout management, add loading of workouts, and implement editing functionality. Include styles for workouts and update EditWorkout component to handle dialog closure.

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -61,6 +61,7 @@
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
+@import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
