--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,6 +40,7 @@
 @import '../../components/MacrosDonut/styles/MacrosDonut.scss';
 @import '../../components/ItemDetails/styles/ItemDetails.scss';
 @import '../../components/Pickers/styles/Pickers.scss';
+@import '../../components/WorkoutDetails/styles/WorkoutDetails.scss';
 @import '../../components/LoggedList/styles/LoggedList.scss';
 @import '../../components/LinearMacrosProgress/styles/LinearMacrosProgress.scss';
 @import '../../components/GoalBanner/styles/GoalBanner.scss';
