--- a/src/components/WorkoutDetails/styles/WorkoutDetails.scss
+++ b/src/components/WorkoutDetails/styles/WorkoutDetails.scss
@@ -22,44 +22,18 @@
     }
   }
 
-  .details-container {
-    display: grid;
-    gap: 0.5rem;
-  }
+  .exercises-list {
+    .custom-list-item {
+      gap: 1rem;
 
-  .exercises-container {
-    display: grid;
-    gap: 1rem;
+      grid-template-columns: 50px 1fr auto;
 
-    .exercise-container {
-      display: grid;
-      gap: 0.5rem;
-
-      .exercise-name-container {
-        font-weight: 600;
-      }
-
-      .exercise-muscle-groups-container {
-        opacity: 0.7;
-      }
-
-      .exercise-equipment-container {
-        opacity: 0.7;
-      }
-
-      .exercise-details-container {
-        display: grid;
-        gap: 0.5rem;
-        padding: 0.5rem;
-        margin-top: 0.5rem;
-
-        .detail-item-container {
-          display: grid;
-          grid-template-columns: auto 1fr;
-          gap: 0.5rem;
-        }
+      img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 50%;
       }
     }
   }
 }
-
