--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -59,6 +59,7 @@
 @import '../../components/ColorPicker/styles/ColorPicker.scss';
 @import '../../components/WeightChart/styles/WeightChartSettings.scss';
 @import '../../components/ClickAnimation/styles/ClickAnimation.scss';
+@import '../../components/ExerciseDetails/styles/ExerciseDetails.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
