Move day controller header to it's own cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import '../../components/AppHeader/styles/AppHeader.scss';
 @import '../../components/AppFooter/styles/AppFooter.scss';
 @import '../../components/TimesContainer/styles/TimesContainer.scss';
+@import '../../components/DayController/styles/DayController.scss';
 @import '../../components/Prefs/styles/Prefs.scss';
 @import '../../components/PrefsButton/styles/PrefsButton.scss';
 @import '../../components/ShadowOverlay/styles/ShadowOverlay.scss';
