--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -61,6 +61,7 @@
 @import '../../components/WeightChart/styles/WeightChartSettings.scss';
 @import '../../components/ClickAnimation/styles/ClickAnimation.scss';
 @import '../../components/ExerciseDetails/styles/ExerciseDetails.scss';
+@import '../../components/ExerciseEditor/styles/ExerciseEditor.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
