Add updateSet functionality to ExerciseEditor for editing existing sets; enhance ClockPicker with min/max values; introduce new badge styles for sets; update messages for better error handling.

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -895,3 +895,59 @@ body.dark-mode {
   font-weight: 600 !important;
   opacity: 0.7;
 }
+
+.MuiBadge-root {
+  &.primary {
+    .MuiBadge-badge {
+      background-color: $primary-color;
+    }
+  }
+
+  &.blue {
+    .MuiBadge-badge {
+      background-color: $picker-color-blue;
+    }
+  }
+
+  &.red {
+    .MuiBadge-badge {
+      background-color: $picker-color-red;
+    }
+  }
+
+  &.yellow {
+    .MuiBadge-badge {
+      background-color: $picker-color-yellow;
+    }
+  }
+
+  &.green {
+    .MuiBadge-badge {
+      background-color: $picker-color-green;
+    }
+  }
+
+  &.orange {
+    .MuiBadge-badge {
+      background-color: $picker-color-orange;
+    }
+  }
+
+  &.deepPurple {
+    .MuiBadge-badge {
+      background-color: $picker-color-deep-purple;
+    }
+  }
+
+  &.purple {
+    .MuiBadge-badge {
+      background-color: $picker-color-purple;
+    }
+  }
+
+  &.pink {
+    .MuiBadge-badge {
+      background-color: $picker-color-pink;
+    }
+  }
+}
