--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -5,4 +5,10 @@
     display: grid;
     grid-auto-flow: column;
   }
+
+  .controls-container {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 1rem;
+  }
 }
