Add week toggle to EditWorkout

--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -109,6 +109,11 @@
     }
   }
 
+  .week-number-toggle {
+    overflow-x: auto;
+    max-width: calc(100vw - 2em);
+  }
+
   .no-exercises,
   .no-results-container,
   h4 {
