--- a/src/CustomMui/CustomToggle/styles/CustomToggle.scss
+++ b/src/CustomMui/CustomToggle/styles/CustomToggle.scss
@@ -14,6 +14,24 @@
   max-width: 100%;
   overflow-x: auto;
 
+  &:has(.toggle-badge) {
+    padding: 0.8rem;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
+
+  .toggle-badge {
+    top: 0.2rem;
+    left: 0.2rem;
+    z-index: 5;
+    span {
+      padding: 0;
+      svg {
+        padding: 2px;
+      }
+    }
+  }
+
   .MuiToggleButtonGroup-groupedHorizontal {
     display: flex;
     gap: 0.5rem;
