--- a/src/CustomMui/CustomToggle/styles/CustomToggle.scss
+++ b/src/CustomMui/CustomToggle/styles/CustomToggle.scss
@@ -21,9 +21,11 @@
   }
 
   .toggle-badge {
-    top: 0.2rem;
-    left: 0.2rem;
+    top: 0.5rem;
+    left: 0.5rem;
+    position: absolute;
     z-index: 5;
+    color: $white;
     span {
       padding: 0;
       svg {
