--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -6,8 +6,9 @@
   }
 
   .edit-workout-stage {
-    min-height: 300px;
+    min-height: 200px;
     padding: 1em;
+    padding-bottom: 3rem;
     display: grid;
     gap: 1rem;
     align-content: start;
@@ -61,7 +62,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
 
-        gap: 1rem 0rem;
+        gap: 0.5rem 0rem;
 
         .divider,
         .MuiTextField-root,
