--- a/src/pages/LiftMate/Session/styles/Session.scss
+++ b/src/pages/LiftMate/Session/styles/Session.scss
@@ -12,6 +12,10 @@
     padding: 1rem 0;
     padding-inline-start: 1rem;
   }
+
+  .session-container-animation {
+    padding-bottom: 5px;
+  }
   .exercises-container {
     display: grid;
 
