--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -22,7 +22,7 @@
 
   .controls-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-auto-flow: column;
     gap: 1rem;
     align-items: center;
   }
