Add isNewInstructions to workout to display new instructions for a trainee

--- a/src/pages/LiftMate/Session/styles/Session.scss
+++ b/src/pages/LiftMate/Session/styles/Session.scss
@@ -13,6 +13,13 @@
     padding-inline-start: 1rem;
   }
 
+  .selected-workout-list {
+    .done-icon {
+      width: 36px;
+      height: 36px;
+    }
+  }
+
   .session-container-animation {
     padding-bottom: 5px;
   }
