Add basic users rendering to TraineesCard

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -62,6 +62,7 @@
 @import '../../components/ClickAnimation/styles/ClickAnimation.scss';
 @import '../../components/ExerciseDetails/styles/ExerciseDetails.scss';
 @import '../../components/ExerciseEditor/styles/ExerciseEditor.scss';
+@import '../../components/MyTraineeCard/styles/MyTraineeCard.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
