Add styled TrainerRequest card to display a more detailed request

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -63,6 +63,7 @@
 @import '../../components/ExerciseDetails/styles/ExerciseDetails.scss';
 @import '../../components/ExerciseEditor/styles/ExerciseEditor.scss';
 @import '../../components/MyTraineeCard/styles/MyTraineeCard.scss';
+@import '../../components/TrainerRequestCard/styles/TrainerRequestCard.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
