Add basic TraineeUserCard to display curr traineeUser

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -64,6 +64,7 @@
 @import '../../components/ExerciseEditor/styles/ExerciseEditor.scss';
 @import '../../components/MyTraineeCard/styles/MyTraineeCard.scss';
 @import '../../components/TrainerRequestCard/styles/TrainerRequestCard.scss';
+@import '../../components/TraineeUserCard/styles/TraineeUserCard.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
