Add better selected exercises and searched exercises UX

--- a/src/components/TraineeUserCard/styles/TraineeUserCard.scss
+++ b/src/components/TraineeUserCard/styles/TraineeUserCard.scss
@@ -11,9 +11,9 @@
   gap: 1rem;
   background-color: $white;
   z-index: 1000;
-  padding: 1rem 0.5rem 1rem 1rem;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
   border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+  // border-bottom-right-radius: 1rem;
 
   transition: transform 0.3s ease-in-out;
 
