--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -51,7 +51,35 @@
     }
 
     &.exercises-stage {
-      // TODO: Add styles for exercises stage
+      .search-exercise-list,
+      .selected-exercise-list {
+        // max-height: 250px;
+        // height: 100%;
+        overflow-y: auto;
+
+        .custom-list-item {
+          display: grid;
+          grid-template-columns: 50px 1fr auto;
+          gap: 1rem;
+        }
+
+        .MuiListItemText-primary {
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+        }
+
+        img {
+          width: 50px;
+          height: 50px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+
+      .selected-exercise-list {
+        max-height: 250px;
+      }
     }
 
     &.details-stage {
@@ -84,32 +112,6 @@
     height: 350px;
 
     // grid-template-rows: 150px auto;
-  }
-
-  .search-exercise-list,
-  .selected-exercise-list {
-    // max-height: 300px;
-    // height: 100%;
-    overflow-y: auto;
-
-    .custom-list-item {
-      display: grid;
-      grid-template-columns: 50px 1fr auto;
-      gap: 1rem;
-    }
-
-    .MuiListItemText-primary {
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-    }
-
-    img {
-      width: 50px;
-      height: 50px;
-      object-fit: cover;
-      border-radius: 50%;
-    }
   }
 
   .week-number-toggle {
