--- a/src/components/Pickers/styles/Pickers.scss
+++ b/src/components/Pickers/styles/Pickers.scss
@@ -9,6 +9,9 @@
     display: grid;
     grid-auto-flow: column;
     gap: 1em;
+    max-width: 100%;
+
+    overflow-x: auto;
+    padding: 0 0.5rem 0.5rem 0.5rem;
   }
 }
-
