--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -95,14 +95,30 @@
 
         gap: 0.5rem 0rem;
 
-        h4 {
-          grid-row: 1/2;
-          grid-column: 1/2;
-        }
-        .custom-toggle {
-          grid-row: 1/2;
-          grid-column: 2/3;
-          justify-self: end;
+        .header-container {
+          grid-column: 1/-1;
+          // display: flex;
+          display: grid;
+          grid-template-columns: auto 1fr auto;
+
+          // justify-content: space-between;
+          align-items: center;
+          gap: 0.5rem;
+
+          h4 {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            max-width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            justify-self: start;
+          }
+          .custom-toggle {
+            grid-column: 3/4;
+            grid-row: 1/2;
+            justify-self: end;
+          }
         }
 
         .divider,
