--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -107,6 +107,8 @@ $dark-gray: #424242;
 $darker-gray: #333;
 $very-dark-gray: #1d1d1d;
 
+$dark-mode-border: rgba(255, 255, 255, 0.12);
+
 $neutral-gray: #f5f5f5;
 
 $white: #fff;
