--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -17,7 +17,20 @@
     &.name-stage {
       // TODO: Add styles for name stage
 
-      gap: 0.2rem;
+      .divider {
+        margin-top: 0.5rem;
+      }
+      .muscle-filter-input {
+        align-self: center;
+        .MuiInputBase-root {
+          padding: 0rem;
+        }
+        input {
+          padding: 0.6rem 0rem 0.6rem 0.8rem;
+        }
+      }
+
+      gap: 0rem;
       .selected-muscles-group-container {
         min-height: 48px;
         display: grid;
@@ -118,6 +131,9 @@
             grid-column: 3/4;
             grid-row: 1/2;
             justify-self: end;
+            button {
+              padding: 0.3rem 1rem;
+            }
           }
         }
 
