--- a/src/pages/LiftMate/Session/styles/Session.scss
+++ b/src/pages/LiftMate/Session/styles/Session.scss
@@ -14,6 +14,9 @@
   }
 
   .selected-workout-list {
+    .custom-list-item {
+      padding-right: 1.5rem;
+    }
     .done-icon {
       width: 36px;
       height: 36px;
