--- a/src/pages/LiftMate/Workouts/styles/Workouts.scss
+++ b/src/pages/LiftMate/Workouts/styles/Workouts.scss
@@ -13,6 +13,37 @@
     margin: 0.5rem 0;
   }
 
+  .workouts-lists-container {
+    // .inactive-list {
+    //   max-height: 250px;
+    //   overflow-y: auto;
+    // }
+
+    .past-controller {
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      gap: 0.5rem;
+
+      .date-picker-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        gap: 0.5rem;
+      }
+    }
+    .divider {
+      margin: 0.8rem 0;
+    }
+
+    .no-past-workouts-message {
+      text-align: center;
+      margin: 1rem 0;
+      opacity: 0.7;
+    }
+  }
+
   .actions-container {
     display: flex;
     align-items: center;
