Add add new instructions when instructions is done

--- a/src/pages/LiftMate/Session/styles/Session.scss
+++ b/src/pages/LiftMate/Session/styles/Session.scss
@@ -1,8 +1,13 @@
 .session-container {
-  .start-icon {
+  .icon {
     // cursor: pointer;
     // color: $primary-color;
-    font-size: 2.5rem;
+
+    font-size: 2rem;
+
+    &.start {
+      font-size: 2rem;
+    }
   }
 
   .workout-header-container {
