Modify EditWorkout and Set to include rpe/rir to each set, modify ExerciseEditor to work with EditWorkout

--- a/src/components/SwipeableWrapper/styles/SwipeableWrapper.scss
+++ b/src/components/SwipeableWrapper/styles/SwipeableWrapper.scss
@@ -1,3 +1,10 @@
 .swipeable-wrapper {
   width: 100%;
 }
+
+.swipeable-list-item-container {
+  // padding: 0.5rem 0;
+  .divider {
+    margin: 1rem 0;
+  }
+}
