--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -3,12 +3,44 @@
   gap: 1rem;
 
   .set-container {
+    position: relative;
+    width: 100%;
     .set-editor-container {
+      width: 100%;
+
       display: grid;
-      grid-auto-flow: column;
+      grid-template-columns: 20px 1fr 1fr 1fr;
+      // grid-auto-flow: column;
+
       // align-items: center;
-      justify-items: start;
-      padding: 1rem 0 0 1rem;
+      // justify-items: start;
+      justify-items: center;
+
+      padding: 1rem 0 0 0;
+
+      .MuiBadge-root {
+        // position: absolute;
+        top: 1rem;
+        left: 0.2rem;
+        span {
+          font-weight: 700;
+          font-size: 1.1rem;
+        }
+      }
+
+      .MuiFormLabel-root {
+        font-weight: 700;
+        // font-size: 1.1rem;
+      }
+
+      .MuiFormControl-root {
+        margin: 0.5rem 0.2rem 0 0;
+
+        .MuiSelect-select {
+          font-weight: 700;
+          // padding: 0.2rem;
+        }
+      }
 
       .remove-container {
         align-self: center;
