Add SetsTable, display past sets inside ExerciseDetails

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,6 +65,7 @@
 @import '../../components/MyTraineeCard/styles/MyTraineeCard.scss';
 @import '../../components/TrainerRequestCard/styles/TrainerRequestCard.scss';
 @import '../../components/TraineeUserCard/styles/TraineeUserCard.scss';
+@import '../../components/SetsTable/styles/SetsTable.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
