--- a/src/components/ExerciseDetails/styles/ExerciseDetails.scss
+++ b/src/components/ExerciseDetails/styles/ExerciseDetails.scss
@@ -1,7 +1,7 @@
 .exercise-details-container {
   display: grid;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem 1rem;
 
   img {
     width: 200px;
@@ -26,5 +26,9 @@
     display: grid;
     gap: 1rem;
     overflow-y: auto;
+  }
+
+  .sets-table {
+    margin-top: 0rem;
   }
 }
