Enhance ExerciseDetails and SetsTable components with Badge for new sessions and improved handling of empty states

--- a/src/components/ExerciseDetails/styles/ExerciseDetails.scss
+++ b/src/components/ExerciseDetails/styles/ExerciseDetails.scss
@@ -31,4 +31,13 @@
   .sets-table {
     margin-top: 0rem;
   }
+
+  .MuiBadge-root {
+    // position: absolute;
+    right: 2rem;
+    top: 2rem;
+    span {
+      font-weight: 700;
+    }
+  }
 }
