Add dark mode to SetsTable

--- a/src/components/ExerciseDetails/styles/ExerciseDetails.scss
+++ b/src/components/ExerciseDetails/styles/ExerciseDetails.scss
@@ -34,10 +34,12 @@
 
   .MuiBadge-root {
     // position: absolute;
-    right: 2rem;
-    top: 2rem;
-    span {
-      font-weight: 700;
+    &.new {
+      right: 2rem;
+      top: 2rem;
+      span {
+        font-weight: 700;
+      }
     }
   }
 }
