Add DateRangeController to Progress

--- a/src/components/DateRangeController/styles/DateRangeController.scss
+++ b/src/components/DateRangeController/styles/DateRangeController.scss
@@ -1,3 +1,10 @@
 // DateRangeController styles
 // Add any specific styles for DateRangeController component here if needed
 
+.date-picker-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  gap: 0.5rem;
+}
