--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -66,6 +66,7 @@
 @import '../../components/TrainerRequestCard/styles/TrainerRequestCard.scss';
 @import '../../components/TraineeUserCard/styles/TraineeUserCard.scss';
 @import '../../components/SetsTable/styles/SetsTable.scss';
+@import '../../components/DateRangeController/styles/DateRangeController.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
