Add basic exercise search in progress

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -72,6 +72,7 @@
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
 @import '../../pages/LiftMate/Session/styles/Session.scss';
+@import '../../pages/LiftMate/Progress/styles/Progress.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
