--- a/src/components/SetsTable/styles/SetsTable.scss
+++ b/src/components/SetsTable/styles/SetsTable.scss
@@ -3,6 +3,10 @@
   overflow-x: auto;
   margin-top: 1rem;
 
+  .MuiTableBody-root {
+    border-bottom: none !important;
+  }
+
   &.dark-mode {
     background-color: $dark-gray;
     color: $white;
@@ -11,18 +15,22 @@
       th {
         color: $white !important;
         font-weight: 700;
-        border-bottom: 1px solid $darker-gray !important;
+        // border-bottom: 1px solid $darker-gray !important;
+        border-color: $darker-gray !important;
       }
     }
 
     tr {
-      &:last-of-type {
-        border: none !important;
-      }
       td {
         color: $white !important;
-        border-bottom: 1px solid $darker-gray !important;
+        // border-bottom: 1px solid $darker-gray !important;
+        border-color: $darker-gray !important;
       }
+    }
+  }
+  .MuiTableRow-root {
+    th {
+      //   border-bottom: 1px solid $medium-gray !important;
     }
   }
 
