Enhance SetsTable component by wrapping entries in TableBody for improved structure; update Progress.scss to manage overflow behavior for better layout

--- a/src/pages/LiftMate/Progress/styles/Progress.scss
+++ b/src/pages/LiftMate/Progress/styles/Progress.scss
@@ -3,10 +3,15 @@
   //   padding: 1rem;
   padding-top: 2rem;
   grid-template-rows: auto auto 1fr;
+  overflow-y: hidden !important;
 
   .filters-container {
     display: grid;
 
     gap: 1rem;
+  }
+
+  .search-exercise-list {
+    overflow-y: auto !important;
   }
 }
