--- a/src/pages/LiftMate/Session/styles/Session.scss
+++ b/src/pages/LiftMate/Session/styles/Session.scss
@@ -16,6 +16,12 @@
     justify-content: space-between;
     padding: 1rem 0;
     padding-inline-start: 1rem;
+
+    .actions-container {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
   }
 
   .selected-workout-list {
