Add add actual notes to WorkoutSession

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -67,6 +67,7 @@
 @import '../../components/TraineeUserCard/styles/TraineeUserCard.scss';
 @import '../../components/SetsTable/styles/SetsTable.scss';
 @import '../../components/DateRangeController/styles/DateRangeController.scss';
+@import '../../components/WorkoutSession/styles/WorkoutSession.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
