Add favorite color to all selects across the app

--- a/src/CustomMui/CustomSelect/styles/CustomSelect.scss
+++ b/src/CustomMui/CustomSelect/styles/CustomSelect.scss
@@ -11,9 +11,12 @@
   }
 }
 
-.custom-select {
+.custom-select,
+.MuiInputBase-root,
+.picker-select {
   &.primary {
-    .MuiInputBase-colorPrimary {
+    .MuiInputBase-colorPrimary,
+    .MuiSelect-root {
       &.Mui-focused {
         fieldset {
           border-color: $primary-color !important;
