--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -19,6 +19,7 @@ button {
 
 .page-container {
   // padding: 1rem 0rem;
+  height: calc(100vh - $header-margin);
   height: calc(100vh - $header-margin - 120px);
   overflow-y: auto;
 }
