--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -20,7 +20,8 @@ button {
 .page-container {
   // padding: 1rem 0rem;
   height: calc(100vh - $header-margin);
-  height: calc(100vh - $header-margin - 120px);
+  // height: calc(100vh - $header-margin - 120px);
+  height: calc(100vh - 120px);
   overflow-y: auto;
 }
 
