--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -196,9 +196,10 @@ body {
 
 .main {
   min-height: 100vh;
-  height: calc(100vh - 100px - $header-margin);
+  // height: calc(100vh - 100px - $header-margin);
+  height: calc(100vh - 100px);
 
-  margin-top: $header-margin;
+  // margin-top: $header-margin;
   // margin-bottom: 100px !important;
 
   padding: 0 1em;
