--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -1,15 +1,24 @@
+.first-time-edit-goal-container {
+  padding-top: 3rem;
+
+  .custom-stepper {
+    margin-top: 2.5rem;
+  }
+}
+
 .edit-goal-container {
-  padding: 1rem;
+  // padding: 1rem;
   height: 100%;
 
   .custom-stepper-stage {
-    height: 360px;
+    height: 420px;
   }
 
   .animation-container {
     justify-self: center;
-    width: 300px;
-    height: 300px;
+    // width: 300px;
+    // height: 300px;
+    max-width: 300px;
   }
 
   .targets-container {
@@ -18,14 +27,27 @@
     // display: flex;
     // flex-direction: row;
     // flex-wrap: wrap;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 1rem;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    // grid-template-columns: repeat(3, auto);
+    // gap: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.3rem;
+
     margin: 1rem 0;
+    // width: 100%;
 
     .target-button {
-      //   width: 100%;
+      justify-self: center;
       border-radius: 25px;
+      font-size: 0.8rem;
+      gap: 2px;
+
+      svg {
+        font-size: 1.3rem;
+      }
     }
   }
 
@@ -56,11 +78,17 @@
 
     .buttons-container {
       // grid-row: 2/3;
-      grid-column: 1/3;
+      grid-column: 1/-1;
       display: grid;
-      grid-auto-flow: column;
+      // align-items: center;
+      // justify-content: center;
+      width: 100%;
+      // grid-auto-flow: column;
       // justify-items: start;
       gap: 1rem;
+      button {
+        width: 50%;
+      }
     }
   }
 
