--- a/src/CustomMui/CustomStepper/styles/CustomStepper.scss
+++ b/src/CustomMui/CustomStepper/styles/CustomStepper.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: auto auto 1fr auto;
   gap: 0.5rem;
+  padding: 1rem;
 
   .custom-stepper-stage {
     min-height: 180px;
